# xfce4-stopwatch-plugin-gtk4

xfce4-stopwatch-plugin-master-gtk4/xfce4-stopwatch-plugin-master/: NEWS  meson.build
xfce4-stopwatch-plugin-master-gtk4/xfce4-stopwatch-plugin-master/icons/: meson.build
xfce4-stopwatch-plugin-master-gtk4/xfce4-stopwatch-plugin-master/panel-plugin/: meson.build  stopwatch.c  stopwatch.h  stopwatchtimer.c  stopwatchtimer.h
